Enable test_cpp in CMake script
Issue #281 (bdwgc).

* CMakeLists.txt [enable_cplusplus] (test_cpp): Uncomment add_executable,
target_link_libraries, add_test; remove TODO.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -347,9 +347,9 @@ if (build_tests)
   endif()
 
   if (enable_cplusplus)
-    # TODO add_executable(test_cpp tests/test_cpp.cc)
-    # target_link_libraries(test_cpp PRIVATE gc)
-    # add_test(NAME test_cpp COMMAND test_cpp)
+    add_executable(test_cpp tests/test_cpp.cc)
+    target_link_libraries(test_cpp PRIVATE gc)
+    add_test(NAME test_cpp COMMAND test_cpp)
   endif()
 
   if (enable_disclaim)
