--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,10 @@ environment:
   matrix:
   - TARGET: cmake
     CMAKE_CONFIG: Debug
-    CMAKE_OPTIONS: -Dbuild_tests=ON -Denable_cplusplus=ON -Denable_gc_assertions=ON
+    CMAKE_OPTIONS: -DBUILD_SHARED_LIBS=OFF -Dbuild_tests=ON -Denable_cplusplus=ON -Denable_gc_assertions=ON
+  - TARGET: cmake
+    CMAKE_CONFIG: Release
+    CMAKE_OPTIONS: -Dbuild_tests=ON -Denable_cplusplus=ON
   - TARGET: cygwin
     CONF_OPTIONS: --enable-cplusplus
     CFLAGS_EXTRA: -D GCTEST_PRINT_VERBOSE
