AppVeyor CI: Add CMake build with the default release configuration (a cherry-pick of commit 5a45684f from 'master')

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,8 @@ environment:
   - TARGET: cmake
     CMAKE_CONFIG: Debug
     CMAKE_OPTIONS: -Denable_gc_assertions=ON
+  - TARGET: cmake
+    CMAKE_CONFIG: Release
   - TARGET: cygwin
     CONF_OPTIONS: --enable-cplusplus
   - TARGET: cygwin
