Fix 'unresolved external symbol _main' in gctest reported by MS VC (fix of commit 78c458958)
Issue #281 (bdwgc).

* CMakeLists.txt [build_tests && enable_cplusplus] (test_cpp): Add WIN32
in add_executable specification.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -349,7 +349,7 @@ if (build_tests)
   endif()
 
   if (enable_cplusplus)
-    add_executable(test_cpp tests/test_cpp.cc)
+    add_executable(test_cpp WIN32 tests/test_cpp.cc)
     target_link_libraries(test_cpp PRIVATE gc)
     add_test(NAME test_cpp COMMAND test_cpp)
   endif()
