--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -306,7 +306,7 @@ if (build_tests)
     add_test(NAME cordtest COMMAND cordtest)
 
     if (WIN32)
-      add_executable(de cord/tests/de.c cord/tests/de_win.c)
+      add_executable(de cord/tests/de.c cord/tests/de_win.c cord/tests/de_win.rc)
       set_target_properties(de PROPERTIES WIN32_EXECUTABLE TRUE)
       target_link_libraries(de PRIVATE cord gc gdi32)
     endif()
