.gitignore: Ignore libgccpp shared and static libraries generated by CMake

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@
 /libalphagc.so
 /libcord.so
 /libgc.so
+/libgccpp.so
 /libgcmt-dll.dll.a
 /libirixgc.so
 /liblinuxgc.so
@@ -134,6 +135,8 @@ stamp-h1
 /libgc*-lib.a
 /libgc.a
 /libgc.dll.a
+/libgccpp.a
+/libgccpp.dll.a
 /tests/*.vcxproj
 /tests/*.vcxproj.filters
 /tests/*test
