--- a/.travis.yml
+++ b/.travis.yml
@@ -559,7 +559,7 @@ before_install:
     CPPCHECK_VER=master;
     git clone --depth=3 https://github.com/danmar/cppcheck.git
             ~/cppcheck -b $CPPCHECK_VER;
-    make --directory ~/cppcheck -j CXXFLAGS="-O3 -march=native -D NDEBUG";
+    make --directory ~/cppcheck -j8 CXXFLAGS="-O3 -march=native -D NDEBUG";
   fi
 - if [[ "$AUTOMAKE_VER" != "" || "$LIBTOOL_VER" != ""
         || "$M4_VER" != "" ]]; then
