Travis CI: Fix out-of-memory during cppcheck build
Number of make parallel jobs is reduced to 8 when building cppcheck.

--- a/.travis.yml
+++ b/.travis.yml
@@ -422,7 +422,7 @@ before_install:
     CPPCHECK_VER=1.85;
     git clone --depth=3 https://github.com/danmar/cppcheck.git
             ~/cppcheck -b $CPPCHECK_VER;
-    make --directory ~/cppcheck -j CXXFLAGS="-O3 -march=native -D NDEBUG";
+    make --directory ~/cppcheck -j8 CXXFLAGS="-O3 -march=native -D NDEBUG";
   fi
 - if [[ "$AUTOMAKE_VER" != "" || "$LIBTOOL_VER" != ""
         || "$M4_VER" != "" || "$PKG_CONFIG_VER" != "" ]]; then
