--- a/.travis.yml
+++ b/.travis.yml
@@ -206,28 +206,16 @@ matrix:
     env:
     - CONF_OPTIONS="--disable-parallel-mark --enable-gc-assertions"
   - os: linux
-    addons:
-      apt:
-        packages:
-        - clang-5.0
-        sources:
-        - llvm-toolchain-trusty-5.0
-    compiler: clang-5.0
-    language: c
+    compiler: clang
     env:
-    - CXX=clang++-5.0
     - CFLAGS_EXTRA="-O3 -march=native"
     - CONF_OPTIONS="--enable-cplusplus --enable-single-obj-compilation"
   - os: linux
     addons:
       apt:
         packages:
-        - clang-5.0
         - gcc-multilib
-        sources:
-        - llvm-toolchain-trusty-5.0
-    compiler: clang-5.0
-    language: c
+    compiler: clang
     env:
     - CFLAGS_EXTRA="-m32 -D _FORTIFY_SOURCE=2 -D GC_DISABLE_INCREMENTAL"
     - CONF_OPTIONS="--enable-munmap --enable-gc-assertions --enable-gc-debug"
