--- a/.travis.yml
+++ b/.travis.yml
@@ -289,13 +289,7 @@ matrix:
     - CSA_CHECK=true
     - CFLAGS_EXTRA="-m32"
   - os: linux
-    addons:
-      apt:
-        packages:
-        - clang-5.0
-        sources:
-        - llvm-toolchain-trusty-5.0
-    compiler: clang-5.0
+    compiler: clang
     language: c
     env:
     - CSA_CHECK=true
@@ -324,21 +318,12 @@ matrix:
     env:
     - CONF_OPTIONS="--disable-parallel-mark --enable-gc-assertions"
   - os: linux
-    addons:
-      apt:
-        packages:
-        - clang-5.0
-        sources:
-        - llvm-toolchain-trusty-5.0
-    compiler: clang-5.0
-    language: c
+    compiler: clang
     env:
-    - CXX=clang++-5.0
     - CFLAGS_EXTRA="-fsanitize=address -fno-common -fno-omit-frame-pointer"
     - CONF_OPTIONS="--enable-cplusplus --enable-static"
     - NO_CLONE_LIBATOMIC_OPS=true
     - TESTS_CUSTOM_RUN=true
-    sudo: required
   - os: linux
     addons:
       apt:
@@ -358,20 +343,13 @@ matrix:
     - CONF_OPTIONS="--disable-shared --enable-cplusplus"
     - NO_CLONE_LIBATOMIC_OPS=true
   - os: linux
-    addons:
-      apt:
-        packages:
-        - clang-5.0
-        sources:
-        - llvm-toolchain-trusty-5.0
-    compiler: clang-5.0
+    compiler: clang
     language: c
     env:
     - CFLAGS_EXTRA="-fsanitize=memory -fno-omit-frame-pointer -std=gnu11"
     - CONF_OPTIONS="--enable-static"
     - TESTS_CUSTOM_RUN=true
     - NO_CLONE_LIBATOMIC_OPS=true
-    sudo: required
   - os: linux
     compiler: clang
     env:
@@ -380,66 +358,30 @@ matrix:
     - CONF_OPTIONS="--enable-cplusplus --enable-static"
     - NO_CLONE_LIBATOMIC_OPS=true
   - os: linux
-    addons:
-      apt:
-        packages:
-        - clang-5.0
-        sources:
-        - llvm-toolchain-trusty-5.0
-    compiler: clang-5.0
-    language: c
+    compiler: clang
     env:
     - CFLAGS_EXTRA="-fsanitize=thread -D NO_CANCEL_SAFE -D NO_INCREMENTAL -D USE_SPIN_LOCK -fno-omit-frame-pointer -D TEST_FORK_WITHOUT_ATFORK"
     - CONF_OPTIONS="--enable-gc-assertions --enable-handle-fork=manual"
     - NO_CLONE_LIBATOMIC_OPS=true
   - os: linux
-    addons:
-      apt:
-        packages:
-        - clang-5.0
-        sources:
-        - llvm-toolchain-trusty-5.0
-    compiler: clang-5.0
-    language: c
+    compiler: clang
     env:
     - CFLAGS_EXTRA="-fsanitize=thread -D NO_CANCEL_SAFE -D NO_INCREMENTAL -D USE_SPIN_LOCK -fno-omit-frame-pointer -D TEST_FORK_WITHOUT_ATFORK"
     - CONF_OPTIONS="--enable-gc-assertions --enable-gc-debug --enable-handle-fork=manual --enable-large-config --with-libatomic-ops=no"
   - os: linux
-    addons:
-      apt:
-        packages:
-        - clang-5.0
-        sources:
-        - llvm-toolchain-trusty-5.0
-    compiler: clang-5.0
-    language: c
+    compiler: clang
     env:
     - CFLAGS_EXTRA="-fsanitize=thread -D NO_CANCEL_SAFE -D NO_INCREMENTAL -D USE_SPIN_LOCK -fno-omit-frame-pointer -D NTHREADS=15"
     - CONF_OPTIONS="--disable-parallel-mark"
     - NO_CLONE_LIBATOMIC_OPS=true
   - os: linux
-    addons:
-      apt:
-        packages:
-        - clang-5.0
-        sources:
-        - llvm-toolchain-trusty-5.0
-    compiler: clang-5.0
-    language: c
+    compiler: clang
     env:
     - CFLAGS_EXTRA="-fsanitize=thread -D NO_CANCEL_SAFE -D NO_INCREMENTAL -fno-omit-frame-pointer"
     - CONF_OPTIONS="--disable-parallel-mark --disable-thread-local-alloc --disable-shared --enable-gc-assertions --with-libatomic-ops=no"
   - os: linux
-    addons:
-      apt:
-        packages:
-        - clang-5.0
-        sources:
-        - llvm-toolchain-trusty-5.0
-    compiler: clang-5.0
-    language: c
+    compiler: clang
     env:
-    - CXX=clang++-5.0
     - CFLAGS_EXTRA="-O3 -march=native"
     - CONF_OPTIONS="--enable-cplusplus --enable-static --enable-single-obj-compilation"
     - NO_CLONE_LIBATOMIC_OPS=true
@@ -447,12 +389,8 @@ matrix:
     addons:
       apt:
         packages:
-        - clang-5.0
         - gcc-multilib
-        sources:
-        - llvm-toolchain-trusty-5.0
-    compiler: clang-5.0
-    language: c
+    compiler: clang
     env:
     - CFLAGS_EXTRA="-m32 -D _FORTIFY_SOURCE=2 -D GC_DISABLE_INCREMENTAL -std=gnu11"
     - CONF_OPTIONS="--enable-gc-assertions --enable-gc-debug"
