--- a/.travis.yml
+++ b/.travis.yml
@@ -240,13 +240,7 @@ matrix:
     - CSA_CHECK=true
     - CFLAGS_EXTRA="-m32"
   - os: linux
-    addons:
-      apt:
-        packages:
-        - clang-5.0
-        sources:
-        - llvm-toolchain-trusty-5.0
-    compiler: clang-5.0
+    compiler: clang
     language: c
     env:
     - CSA_CHECK=true
@@ -275,20 +269,11 @@ matrix:
     env:
     - CONF_OPTIONS="--disable-parallel-mark --enable-gc-assertions"
   - os: linux
-    addons:
-      apt:
-        packages:
-        - clang-5.0
-        sources:
-        - llvm-toolchain-trusty-5.0
-    compiler: clang-5.0
-    language: c
+    compiler: clang
     env:
-    - CXX=clang++-5.0
     - CFLAGS_EXTRA="-fsanitize=address -fno-common -fno-omit-frame-pointer -D AO_NO_PTHREADS"
     - CONF_OPTIONS="--enable-cplusplus"
     - TESTS_CUSTOM_RUN=true
-    sudo: required
   - os: linux
     addons:
       apt:
@@ -307,19 +292,12 @@ matrix:
     - CFLAGS_EXTRA="-fsanitize=address -m32 -fno-omit-frame-pointer"
     - CONF_OPTIONS="--disable-shared --enable-cplusplus --enable-munmap"
   - os: linux
-    addons:
-      apt:
-        packages:
-        - clang-5.0
-        sources:
-        - llvm-toolchain-trusty-5.0
-    compiler: clang-5.0
+    compiler: clang
     language: c
     env:
     - CFLAGS_EXTRA="-fsanitize=memory -fno-omit-frame-pointer -D NO_INCREMENTAL"
     - CONF_OPTIONS="--enable-handle-fork --enable-munmap"
     - TESTS_CUSTOM_RUN=true
-    sudo: required
   - os: linux
     compiler: clang
     env:
@@ -327,28 +305,16 @@ matrix:
     - TESTS_CUSTOM_RUN=true
     - CONF_OPTIONS="--enable-cplusplus --enable-handle-fork --enable-munmap"
   - os: linux
-    addons:
-      apt:
-        packages:
-        - clang-5.0
-        sources:
-        - llvm-toolchain-trusty-5.0
-    compiler: clang-5.0
-    language: c
+    compiler: clang
     env:
-    - CXX=clang++-5.0
     - CFLAGS_EXTRA="-O3 -march=native"
     - CONF_OPTIONS="--enable-cplusplus --enable-single-obj-compilation"
   - os: linux
     addons:
       apt:
         packages:
-        - clang-5.0
         - gcc-multilib
-        sources:
-        - llvm-toolchain-trusty-5.0
-    compiler: clang-5.0
-    language: c
+    compiler: clang
     env:
     - CFLAGS_EXTRA="-m32 -D _FORTIFY_SOURCE=2 -D GC_DISABLE_INCREMENTAL"
     - CONF_OPTIONS="--enable-munmap --enable-gc-assertions --enable-gc-debug"
