Remove dependency on user32.dll import library from static libgc (Win32)
* CMakeLists.txt [!BUILD_SHARED_LIBS && WIN32] (DONT_USE_USER32_DLL):
Define C macro; add comment.
* configure.ac [($enable_static=yes || $enable_shared=no)
&& $host=*-*-cygwin*|*-*-mingw*|*-*-msys*] (DONT_USE_USER32_DLL):
Likewise.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -253,6 +253,10 @@ if (BUILD_SHARED_LIBS)
   add_definitions("-DGC_DLL")
 else()
   add_definitions("-DGC_NOT_DLL")
+  if (WIN32)
+    # Do not require the clients to link with "user32" system library.
+    add_definitions("-DDONT_USE_USER32_DLL")
+  endif(WIN32)
 endif()
 
 add_library(gc ${SRC})
