Compile msvc_dbg.c by CMake script (MS VC)
* CMakeLists.txt [MSVC] (SRC): Add extra/msvc_dbg.c; add comment.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -290,6 +290,11 @@ elseif (BORLAND)
   add_compile_options(/w-use)
 endif()
 
+# Add implementation of backtrace() and backtrace_symbols().
+if (MSVC)
+  set(SRC ${SRC} extra/msvc_dbg.c)
+endif()
+
 if (BUILD_SHARED_LIBS)
   add_definitions("-DGC_DLL")
 else()
