--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,20 @@ environment:
     CMAKE_OPTIONS: -Dbuild_tests=ON -Denable_cplusplus=ON -Denable_large_config=ON
   - TARGET: cmake
     CMAKE_CONFIG: Release
+  - TARGET: nmake
+    BLD: debug
+    CPU: x86
+    MACRO_DEFS: enable_static=1
+    MS_SDK_VER: v7.1
+  - TARGET: nmake
+    BLD: debug
+    CPU: x64
+    MS_SDK_VER: v7.1
+  - TARGET: nmake
+    BLD: release
+    CPU: x86
+    MACRO_DEFS: nodebug=1
+    MS_SDK_VER: v7.1
   - TARGET: cygwin
     CONF_OPTIONS: --enable-cplusplus
     CFLAGS_EXTRA: -D GCTEST_PRINT_VERBOSE
@@ -42,6 +56,8 @@ install:
 build_script:
 - cmd: if [%TARGET%]==[cmake] (
     cmake %CMAKE_OPTIONS% -Denable_werror=ON . && cmake --build . --config %CMAKE_CONFIG% )
+- cmd: if [%TARGET%]==[nmake] (
+    "C:\Program Files\Microsoft SDKs\Windows\%MS_SDK_VER%\Bin\SetEnv.cmd" /%CPU% /%BLD% && nmake /f NT_MAKEFILE %MACRO_DEFS% )
 - cmd: if [%TARGET%]==[cygwin] (
     C:\cygwin\bin\bash -e -l -c
       "cd /cygdrive/c/projects/bdwgc && ./autogen.sh && ./configure %CONF_OPTIONS% --enable-werror && cat include/config.h && make -j CFLAGS_EXTRA='%CFLAGS_EXTRA%'" )
@@ -60,6 +76,8 @@ build_script:
 
 test_script:
 - cmd: if [%TARGET%]==[cmake] ( ctest --build-config %CMAKE_CONFIG% -V )
+- cmd: if [%TARGET%]==[nmake] (
+    "C:\Program Files\Microsoft SDKs\Windows\%MS_SDK_VER%\Bin\SetEnv.cmd" /%CPU% /%BLD% && nmake /f NT_MAKEFILE check %MACRO_DEFS% && nmake /f NT_MAKEFILE clean )
 - cmd: if [%TARGET%]==[cygwin] (
     C:\cygwin\bin\bash -e -l -c
       "cd /cygdrive/c/projects/bdwgc && make -j check-without-test-driver CFLAGS_EXTRA='%CFLAGS_EXTRA%'" )
